fix: Extract and set user role in JWT authentication filter