@@ -1,7 +1,5 @@
 package com.Incubyte.Sweet_Shop_Backend.Security;
 
-import com.Incubyte.Sweet_Shop_Backend.Model.User;
-import com.Incubyte.Sweet_Shop_Backend.Repo.UserRepo;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -14,7 +12,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -22,46 +20,48 @@ public class JwtAuthFilter extends OncePerRequestFilter {
     @Autowired
     private JwtUtil jwtUtil;
 
-    @Autowired
-    private UserRepo userRepo;
-
     @Override
-    protected void doFilterInternal(HttpServletRequest req,
-                                    HttpServletResponse res,
-                                    FilterChain chain)
-            throws ServletException, IOException {
-
-        String header = req.getHeader("Authorization");
-
-        if (header != null && header.startsWith("Bearer ")) {
-            String token = header.substring(7);
-
+    protected void doFilterInternal(HttpServletRequest request, 
+                                    HttpServletResponse response, 
+                                    FilterChain filterChain) throws ServletException, IOException {
+        
+        String authHeader = request.getHeader("Authorization");
+        
+        if (authHeader != null && authHeader.startsWith("Bearer ")) {
+            String token = authHeader.substring(7);
+            
             try {
                 String username = jwtUtil.extractUsername(token);
-
+                String role = jwtUtil.extractRole(token);  // Extract role from JWT
+                
                 if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-
-                    User user = userRepo.findByUsername(username).orElse(null);
-
-                    if (user != null && jwtUtil.validateToken(token, username)) {
-
-                        SimpleGrantedAuthority authority =
-                                new SimpleGrantedAuthority("ROLE_" + user.getRole());
-
-                        UsernamePasswordAuthenticationToken auth =
-                                new UsernamePasswordAuthenticationToken(
-                                        username,
-                                        null,
-                                        List.of(authority)
-                                );
-
-                        SecurityContextHolder.getContext().setAuthentication(auth);
+                    if (jwtUtil.validateToken(token, username)) {
+                        // Create authority from role (add "ROLE_" prefix for Spring Security)
+                        SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + role);
+                        
+                        // Create authentication token with role
+                        UsernamePasswordAuthenticationToken authToken = 
+                            new UsernamePasswordAuthenticationToken(
+                                username, 
+                                null, 
+                                Collections.singletonList(authority)
+                            );
+                        
+                        // Set authentication in security context
+                        SecurityContextHolder.getContext().setAuthentication(authToken);
+                        
+                        System.out.println("=== JWT AUTH DEBUG ===");
+                        System.out.println("User: " + username);
+                        System.out.println("Role: " + role);
+                        System.out.println("Authority: ROLE_" + role);
+                        System.out.println("=== END DEBUG ===");
                     }
                 }
-
-            } catch (Exception ignored) {
+            } catch (Exception e) {
+                System.err.println("JWT Filter Error: " + e.getMessage());
             }
         }
-        chain.doFilter(req, res);
+        
+        filterChain.doFilter(request, response);
     }
 }
